Optimizing structure.
