# api/api/src/main/resources/openapi/documentation.yaml
@@ -113,11 +113,6 @@ paths:
         required: true
         schema:
           type: "string"
-      - name: "stran"
-        in: "query"
-        required: false
-        schema:
-          type: "integer"
       responses:
         "200":
           description: "OK"
@@ -174,11 +169,6 @@ paths:
         required: true
         schema:
           type: "string"
-      - name: "stran"
-        in: "query"
-        required: false
-        schema:
-          type: "integer"
       responses:
         "200":
           description: "OK"
